docs(#793): complete bilingual documentation parity